--- a/NLP 2018/HW3_Collocations/collocations.ipynb
+++ b/NLP 2018/HW3_Collocations/collocations.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk.collocations import *\n",
-    "from nltk.metrics.spearman import *\n",
     "from scipy.stats import spearmanr\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "from gensim.models.phrases import Phraser, Phrases\n",
@@ -124,6 +123,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1020 предложений ; 5100 слов\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(rows), 'предложений', ';', len(tokens), 'слов')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -139,22 +155,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def freq_bigrams(tokens, metrics, nbest=10, freq_filter=0):\n",
+    "def freq_bigrams(tokens, metrics, nbest='all', freq_filter=0):\n",
     "    bigram_measures = nltk.collocations.BigramAssocMeasures()\n",
     "    metrics_={'pmi':bigram_measures.pmi, 'lr':bigram_measures.likelihood_ratio}\n",
     "    finder = BigramCollocationFinder.from_words(tokens)\n",
     "    finder.apply_freq_filter(freq_filter)\n",
+    "    if nbest == 'all':\n",
+    "        return finder.score_ngrams(metrics_[metrics])\n",
     "    nbest = finder.nbest(metrics_[metrics], nbest)\n",
     "    return nbest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -172,20 +190,20 @@
        " 'суд дать']"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bigrams_pmi = freq_bigrams(tokens, 'pmi', nbest=10, freq_filter=10)\n",
-    "bigrams_pmi = [''.join(i).lower().strip() for i in bigrams_pmi]\n",
-    "bigrams_pmi"
+    "bigrams_pmi = freq_bigrams(tokens, 'pmi', freq_filter=10)\n",
+    "bigrams_pmi = [''.join(i[0]).lower().strip() for i in bigrams_pmi]\n",
+    "bigrams_pmi[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -203,15 +221,15 @@
        " 'суд вынести']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bigrams_lr = freq_bigrams(tokens, 'lr', nbest=10, freq_filter=10)\n",
-    "bigrams_lr = [''.join(i).lower().strip() for i in bigrams_lr]\n",
-    "bigrams_lr"
+    "bigrams_lr = freq_bigrams(tokens, 'lr', freq_filter=10)\n",
+    "bigrams_lr = [''.join(i[0]).lower().strip() for i in bigrams_lr]\n",
+    "bigrams_lr[:10]"
    ]
   },
   {
@@ -236,23 +254,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gold_standard = pd.read_csv('gold_standard.csv', header=None)"
+    "golden_standard = pd.read_csv('gold_standard.csv', header=None)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Сравним полученные результаты:"
+    "Сравним топ-10 коллокаций в каждом из списков:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -278,68 +296,68 @@
        "      <th></th>\n",
        "      <th>pmi</th>\n",
        "      <th>lr</th>\n",
-       "      <th>gold</th>\n",
+       "      <th>golden</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>мера пресечение</td>\n",
+       "      <td>выдать санкция</td>\n",
        "      <td>суд суд</td>\n",
        "      <td>признать виновная</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>выдать санкция</td>\n",
+       "      <td>наложить арест</td>\n",
        "      <td>суд признать</td>\n",
        "      <td>вынести приговор</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>отказать удовлетворение</td>\n",
+       "      <td>санкция арест</td>\n",
        "      <td>выдать санкция</td>\n",
        "      <td>взять перерыв</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>наложить арест</td>\n",
+       "      <td>удовлетворить ходатайство</td>\n",
        "      <td>суд удовлетворить</td>\n",
        "      <td>выслушать защита</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>санкция арест</td>\n",
+       "      <td>признать виновная</td>\n",
        "      <td>удовлетворить иск</td>\n",
        "      <td>вызвать свидетель</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>санкционировать арест</td>\n",
+       "      <td>принять решение</td>\n",
        "      <td>удовлетворить ходатайство</td>\n",
        "      <td>принять решение</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>признать правота</td>\n",
+       "      <td>удовлетворить иск</td>\n",
        "      <td>принять решение</td>\n",
        "      <td>назначить наказание</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>удовлетворить ходатайство</td>\n",
+       "      <td>вынести решение</td>\n",
        "      <td>санкция арест</td>\n",
        "      <td>вести переговоры</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>рассмотреть ходатайство</td>\n",
-       "      <td>мера пресечение</td>\n",
+       "      <td>суд рассмотреть</td>\n",
+       "      <td>наложить арест</td>\n",
        "      <td>освободить залог</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>признать виновная</td>\n",
-       "      <td>наложить арест</td>\n",
+       "      <td>суд дать</td>\n",
+       "      <td>суд вынести</td>\n",
        "      <td>удовлетворить ходатайство</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -348,18 +366,18 @@
       ],
       "text/plain": [
        "                         pmi                         lr  \\\n",
-       "0            мера пресечение                    суд суд   \n",
-       "1             выдать санкция               суд признать   \n",
-       "2    отказать удовлетворение             выдать санкция   \n",
-       "3             наложить арест          суд удовлетворить   \n",
-       "4              санкция арест          удовлетворить иск   \n",
-       "5      санкционировать арест  удовлетворить ходатайство   \n",
-       "6           признать правота            принять решение   \n",
-       "7  удовлетворить ходатайство              санкция арест   \n",
-       "8    рассмотреть ходатайство            мера пресечение   \n",
-       "9          признать виновная             наложить арест   \n",
+       "0             выдать санкция                    суд суд   \n",
+       "1             наложить арест               суд признать   \n",
+       "2              санкция арест             выдать санкция   \n",
+       "3  удовлетворить ходатайство          суд удовлетворить   \n",
+       "4          признать виновная          удовлетворить иск   \n",
+       "5            принять решение  удовлетворить ходатайство   \n",
+       "6          удовлетворить иск            принять решение   \n",
+       "7            вынести решение              санкция арест   \n",
+       "8            суд рассмотреть             наложить арест   \n",
+       "9                   суд дать                суд вынести   \n",
        "\n",
-       "                        gold  \n",
+       "                      golden  \n",
        "0          признать виновная  \n",
        "1           вынести приговор  \n",
        "2              взять перерыв  \n",
@@ -372,68 +390,119 @@
        "9  удовлетворить ходатайство  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = pd.concat([pd.Series(bigrams_pmi), pd.Series(bigrams_lr), gold_standard], axis=1)\n",
-    "results.columns = ['pmi', 'lr', 'gold']\n",
+    "results = pd.concat([pd.Series(bigrams_pmi[:10]), pd.Series(bigrams_lr[:10]), golden_standard], axis=1)\n",
+    "results.columns = ['pmi', 'lr', 'golden']\n",
     "results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 273,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Коэффициент корреляции Спирмана между золотым стандартом и nltk bigrams с метрикой pmi:  -0.19\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/scipy/stats/stats.py:245: RuntimeWarning: The input array could not be properly checked for nan values. nan values will be ignored.\n",
-      "  \"values. nan values will be ignored.\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Коэффициент корреляции Спирмана между золотым стандартом и nltk bigrams с метрикой pmi: ', \n",
-    "      \"%.2f\" % spearmanr(results['pmi'], results['gold'])[0])"
+    "bigrams_pmi_all = freq_bigrams(tokens, 'pmi', freq_filter=0)\n",
+    "for i in range(len(bigrams_pmi_all)):\n",
+    "    bigrams_pmi_all[i] = ((bigrams_pmi_all[i][0][0].lower().strip(), bigrams_pmi_all[i][0][1].lower().strip()), \n",
+    "                          bigrams_pmi_all[i][1])\n",
+    "bigrams_pmi_all_ranks = {bi[0]:i+1 for i, bi in enumerate(bigrams_pmi_all)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigrams_lr_all = freq_bigrams(tokens, 'lr', freq_filter=0)\n",
+    "for i in range(len(bigrams_lr_all)):\n",
+    "    bigrams_lr_all[i] = ((bigrams_lr_all[i][0][0].lower().strip(), bigrams_lr_all[i][0][1].lower().strip()), \n",
+    "                          bigrams_lr_all[i][1])\n",
+    "bigrams_lr_all_ranks = {bi[0]:i+1 for i, bi in enumerate(bigrams_lr_all)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "golden_dict = [(i.split()[0], i.split()[1]) for i in results['golden']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Коэффициент корреляции Спирмана между золотым стандартом и nltk bigrams с метрикой likelihood ratio:  0.12\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/scipy/stats/stats.py:245: RuntimeWarning: The input array could not be properly checked for nan values. nan values will be ignored.\n",
-      "  \"values. nan values will be ignored.\", RuntimeWarning)\n"
+      "gold range(1, 11)\n",
+      "lr [14, 88, 118, 1592, 1479, 7, 2029, 305, 13, 6]\n",
+      "pmi [1967, 1982, 636, 1250, 1043, 1980, 1796, 5, 926, 1928]\n"
      ]
     }
    ],
    "source": [
-    "print('Коэффициент корреляции Спирмана между золотым стандартом и nltk bigrams с метрикой likelihood ratio: ', \n",
-    "      \"%.2f\" % spearmanr(results['lr'], results['gold'])[0])"
+    "ranks_golden = range(1, 11)\n",
+    "ranks_lr = [bigrams_lr_all_ranks[i] for i in golden_dict]\n",
+    "ranks_pmi = [bigrams_pmi_all_ranks[i] for i in golden_dict]\n",
+    "print('gold', ranks_golden)\n",
+    "print('lr', ranks_lr)\n",
+    "print('pmi', ranks_pmi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spearman(lr, prmi)\n",
+      "SpearmanrResult(correlation=-0.3696969696969697, pvalue=0.2930500752928223) \n",
+      "\n",
+      "Spearman(lr, golden)\n",
+      "SpearmanrResult(correlation=-0.23636363636363633, pvalue=0.5108853175152002) \n",
+      "\n",
+      "Spearman(pmi, golden)\n",
+      "SpearmanrResult(correlation=-0.33333333333333326, pvalue=0.34659350708733405)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Spearman(lr, prmi)')\n",
+    "print(spearmanr(ranks_lr, ranks_pmi), '\\n')\n",
+    "print('Spearman(lr, golden)')\n",
+    "print(spearmanr(ranks_lr,ranks_golden), '\\n')\n",
+    "print('Spearman(pmi, golden)')\n",
+    "print(spearmanr(ranks_pmi, ranks_golden))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Во всех трех попарных корреляциях наблюдается невысокая обратная зависимость ранга, о чем говорит небольшие мо модулю \n",
+    "отрицательные коэффициенты. Чем выше ранг в списке коллокаций из алгоритма nltk, тем ниже ранг в ЗС (хотя на 10 объектах говорить о каких-то корреляциях, конечно, нет особо смысла...)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
