--- a/Econometrics 2018/HW1_bivariate_regression.ipynb
+++ b/Econometrics 2018/HW1_bivariate_regression.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__a) Using your computer regression software, the 60 observations you have chosen, and Eq. (2.17), estimate by ordinary least squares the parameters $\\alpha$ and $\\beta$ for one firm in each of these two industries. Do the estimates of $\\beta$ correspond well with your prior intuition or belief? Why or why not?__"
+    "**_a) Using your computer regression software, the 60 observations you have chosen, and Eq. (2.17), estimate by ordinary least squares the parameters $\\alpha$ and $\\beta$ for one firm in each of these two industries. Do the estimates of $\\beta$ correspond well with your prior intuition or belief? Why or why not?_**"
    ]
   },
   {
@@ -256,7 +256,7 @@
     }
    },
    "source": [
-    "__b) For one of those companies, make a time plot of the historical company risk premium, the company risk premium predicted by the regression model and the associated residuals.__"
+    "**_b) For one of those companies, make a time plot of the historical company risk premium, the company risk premium predicted by the regression model and the associated residuals._**"
    ]
   },
   {
@@ -882,14 +882,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T22:58:22.055475Z",
-     "start_time": "2018-10-04T22:58:21.980202Z"
+     "end_time": "2018-10-11T17:59:42.124593Z",
+     "start_time": "2018-10-11T17:59:41.239715Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning:\n",
+      "\n",
+      "The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n",
@@ -901,11 +912,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T22:58:40.020504Z",
-     "start_time": "2018-10-04T22:58:39.997860Z"
+     "end_time": "2018-10-11T17:59:52.208458Z",
+     "start_time": "2018-10-11T17:59:52.166987Z"
     }
    },
    "outputs": [
@@ -924,10 +935,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>  0.9399</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 05 Oct 2018</td> <th>  Prob (F-statistic):</th>  <td> 0.336</td> \n",
+       "  <th>Date:</th>             <td>Thu, 11 Oct 2018</td> <th>  Prob (F-statistic):</th>  <td> 0.336</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>01:58:40</td>     <th>  Log-Likelihood:    </th> <td>  84.600</td>\n",
+       "  <th>Time:</th>                 <td>20:59:52</td>     <th>  Log-Likelihood:    </th> <td>  84.600</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    60</td>      <th>  AIC:               </th> <td>  -165.2</td>\n",
@@ -976,8 +987,8 @@
        "Dep. Variable:                      y   R-squared:                       0.016\n",
        "Model:                            OLS   Adj. R-squared:                 -0.001\n",
        "Method:                 Least Squares   F-statistic:                    0.9399\n",
-       "Date:                Fri, 05 Oct 2018   Prob (F-statistic):              0.336\n",
-       "Time:                        01:58:40   Log-Likelihood:                 84.600\n",
+       "Date:                Thu, 11 Oct 2018   Prob (F-statistic):              0.336\n",
+       "Time:                        20:59:52   Log-Likelihood:                 84.600\n",
        "No. Observations:                  60   AIC:                            -165.2\n",
        "Df Residuals:                      58   BIC:                            -161.0\n",
        "Df Model:                           1                                         \n",
@@ -999,7 +1010,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 280,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,11 +1021,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T22:58:36.372517Z",
-     "start_time": "2018-10-04T22:58:36.346440Z"
+     "end_time": "2018-10-11T17:59:55.099312Z",
+     "start_time": "2018-10-11T17:59:55.074221Z"
     }
    },
    "outputs": [
@@ -1033,10 +1044,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   14.04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 05 Oct 2018</td> <th>  Prob (F-statistic):</th> <td>0.000415</td>\n",
+       "  <th>Date:</th>             <td>Thu, 11 Oct 2018</td> <th>  Prob (F-statistic):</th> <td>0.000415</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>01:58:36</td>     <th>  Log-Likelihood:    </th> <td>  75.152</td>\n",
+       "  <th>Time:</th>                 <td>20:59:55</td>     <th>  Log-Likelihood:    </th> <td>  75.152</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    60</td>      <th>  AIC:               </th> <td>  -146.3</td>\n",
@@ -1085,8 +1096,8 @@
        "Dep. Variable:                      y   R-squared:                       0.195\n",
        "Model:                            OLS   Adj. R-squared:                  0.181\n",
        "Method:                 Least Squares   F-statistic:                     14.04\n",
-       "Date:                Fri, 05 Oct 2018   Prob (F-statistic):           0.000415\n",
-       "Time:                        01:58:36   Log-Likelihood:                 75.152\n",
+       "Date:                Thu, 11 Oct 2018   Prob (F-statistic):           0.000415\n",
+       "Time:                        20:59:55   Log-Likelihood:                 75.152\n",
        "No. Observations:                  60   AIC:                            -146.3\n",
        "Df Residuals:                      58   BIC:                            -142.1\n",
        "Df Model:                           1                                         \n",
@@ -1108,7 +1119,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 279,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1146,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_e) For each of the two companies, compute the proportion of total risk that is market risk, also called systematic and nondiversifiable._ "
+    "**_e) For each of the two companies, compute the proportion of total risk that is market risk, also called systematic and nondiversifiable. Does evidence from the two companies you have chosen correspond to Sharpe's typical stock? Why or why not?_**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-11T18:10:27.885398Z",
+     "start_time": "2018-10-11T18:10:27.874834Z"
+    }
+   },
+   "source": [
+    "$R^2$ is for systematic risk.\n",
+    "\n",
+    "From summaries we get that\n",
+    "- a systematic risk for genmil is $0.016$;\n",
+    "- a systematic risk for citcrp is $0.195$.\n",
+    "- a specific risk for genmil is $1 - 0.016 = 0.984$\n",
+    "- a specific risk for citcrp is $1 - 0.195 = 0.805$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The numbers reflect the idea that banks are more sensitive to macro shocks (CITCRP's risk is nearly 20%, while GENMIL's one is 1.6% which means 20% of the bank's risk can be explained by uncertainty of the overall market). In case of global shock people loose the confidence in the future. Most likely they would take cash from banks, sell assets and so on rather than stop eating bread.\n",
+    "CITCRP's risk is quite close to Sharpe's statement while GENMIL's is not at all.\n",
+    "Apparently Sharpe's proposition is based on average firm data while we have two specific firms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**_i) In your sample, do large estimates of $\\beta$ correspond with higher $R^2$ values? Would you expect this always to be the case? Why or why not?._**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-11T18:40:59.226941Z",
+     "start_time": "2018-10-11T18:40:59.205936Z"
+    }
+   },
+   "source": [
+    "From summaries we get:\n",
+    "\n",
+    "|  \t| $\\beta$ \t| $R^2$ \t|\n",
+    "|--------\t|--------\t|:-----:\t|\n",
+    "| genmil \t| 0.0987 \t| 0.016 \t|\n",
+    "| citcrp \t| 0.45 \t| 0.195 \t|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here large estimates of $\\beta$ **do** correspond with higher $R^2$. Still it's not always the case. Parameter $R^2$ reflects error on input dataset. Assume all values in dataset were multiplied by 1000. Then b will increase respectively while $R^2$ will not change. Moreover,\n",
+    "\n",
+    "$$R^2 = \\frac{\\sum(a+bx)^2}{\\sum(y^2)} $$\n",
+    "\n",
+    "which doesn't imply at all that increasing of $\\beta$ causes increasing of $R^2$."
    ]
   },
   {
