--- a/Econometrics 2018/HW1_ch2_ex4.ipynb
+++ b/Econometrics 2018/HW1_ch2_ex4.ipynb
@@ -153,6 +153,20 @@
     "print('b_y get from the relationship:', b_y, '=', r2, '*', b_x)\n",
     "print('actual b_y:', delta_slope)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**e) Which estimate of $\\beta$ do you prefer - the smaller $b_y$ or the larger $b_x$?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, we defined $b_y$ as an estimator of $\\beta$...do we have a choice? Larger b doesn't mean better b as we have already seen in exercise 2, because larger b doesn't mean larger $R^2$."
+   ]
   }
  ],
  "metadata": {
